Fix line height of the dropdown toggle; remove superfluous spacer below themes that caused the kuler div to occasionally shift; other cleanups

--- a/src/extensions/default/edge-code-kuler/styles/kuler.less
+++ b/src/extensions/default/edge-code-kuler/styles/kuler.less
@@ -3,15 +3,15 @@
 @emphasized-text-color: #454545;
 @heading-color: #454545;
 @link-color: #0083e8;
-@tc-light-weight-text: rgba(224, 240, 250, 1);
+@menu-highlight-color: rgba(224, 240, 250, 1);
 
 /* Typography */
 @font-weight-semibold: 500;
 
 .kuler {
-    display: block;
+    display: block;    
     position: absolute;
-    top: 2px;
+    top: 0px;
     right: 0px;
     left: 440px; // this needs to be set dynamically
     height: 100%;
@@ -22,18 +22,12 @@
     color: @body-text-color;
 }
 
-
-// trying to colorize the kuler links on hover - start
-
 .kuler-dropdown-menu {
-    border-radius: 3px;
-    box-shadow: 0 3px 9px rgba(0, 0, 0, .3);
-    border: none;
-    position: absolute;
     display: block;
-    max-width: none;
+    position: absolute;
     z-index: 100;
-    
+    box-shadow: 0 3px 9px rgba(0, 0, 0, .3);
+
     li {
         list-style-type: none;
         
@@ -49,21 +43,18 @@
     }
     
     .kuler-dropdown-link {
+        display: block;
+        padding: 5px 26px 5px 15px;
         white-space: nowrap;
         background: white;
         color: @emphasized-text-color;
-        display: block;
-        padding: 5px 26px 5px 15px;
         text-decoration: none;
         
         &:hover {
-            background: @tc-light-weight-text;
-            text-decoration: none;
+            background: @menu-highlight-color;
             color: @emphasized-text-color;
         }        
     }
-    
-    
 }
 
 // trying to colorize the kuler links on hover - end
@@ -86,6 +77,7 @@
 /* Right-hand column */
 .kuler-content {
     position: absolute;
+    height: 205px;
     top: 15px;
     right: 0px;
     left: 0px;
@@ -102,6 +94,7 @@
     .kuler-collection-title {
         color: @heading-color;
         font-size: 16px;
+        line-height: 16px ! important;
         padding: 5px;
         white-space: nowrap;
         width: 127px;
@@ -126,12 +119,8 @@
         padding-bottom: 1px;
     }    
     
-    .kuler-spacer {
-        height: 10px;
-    }
-    
     .kuler-scroller {
-        max-height: 178px;
+        max-height: 179px;
         overflow-y: auto;
         overflow-x: hidden;
     }
@@ -270,7 +259,7 @@
 
 a.kuler-more-info {
     position: absolute;
-    bottom: 2px;
+    bottom: 0px;
     right: 20px;
     padding: 4px 10px 4px 28px;
     height: 16px;
